# doc-shape-shifter

./: .env.example  2026-03-31-222935-MVP-release.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
archive/: root_original_gitignore  root_original_pyproject.toml
archive/root_original_scripts/: bootstrap_mac_m4.sh
archive/root_original_src/doc_shape_shifter/: __init__.py  cli.py
archive/root_original_tests/: test_router.py
docs/: prd.md  tech-spec.md  user-manual.md
docs/research/: gemini3dr_Document Conversion Ecosystem Survey_20260329.docx  gemini3dr_Document Conversion Ecosystem Survey_20260329.md  prompt_opus46-cowork-gemini3dr_20260329.md  resources_doc-transform.md
images/: prompt_genai-logos.md
logs/: merge_audit_20260331.md
repo-shape-shifter_opus46-cowork/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
repo-shape-shifter_opus46-cowork/docs/: mac-cli-cmd.md  prd.md  tech-spec.md  user-manual.md
repo-shape-shifter_opus46-cowork/src/doc_shape_shifter/: cli.py  converter.py  detector.py  router.py
repo-shape-shifter_opus46-cowork/src/doc_shape_shifter/backends/: __init__.py  base.py  builtin_backend.py  docling_backend.py  markitdown_backend.py  mathpix_backend.py  pandoc_backend.py  pymupdf_backend.py  tabula_backend.py
repo-shape-shifter_opus46-cowork/src/doc_shape_shifter/pipelines/: __init__.py
repo-shape-shifter_opus46-cowork/src/doc_shape_shifter/pipelines/image/: __init__.py
repo-shape-shifter_opus46-cowork/src/doc_shape_shifter/pipelines/ocr/: __init__.py
repo-shape-shifter_opus46-cowork/src/doc_shape_shifter/pipelines/omr/: __init__.py
repo-shape-shifter_opus46-cowork/src/doc_shape_shifter/pipelines/otr/: __init__.py
repo-shape-shifter_opus46-cowork/src/doc_shape_shifter/utils/: formats.py  logging_config.py
repo-shape-shifter_opus46-cowork/tests/unit/: test_converter.py  test_detector.py  test_router.py
scripts/: build_release_zip.sh  check_backends.py  sync_repo.sh
src/doc_shape_shifter/: __init__.py  __main__.py  cli.py  converter.py  detector.py  router.py
src/doc_shape_shifter/backends/: __init__.py  base.py  builtin_backend.py  docling_backend.py  markitdown_backend.py  mathpix_backend.py  pandoc_backend.py  (+2 more)
tests/fixtures/: sample.html  sample.json  sample.md  sample.rtf  sample.tex  sample.txt
tests/integration/: test_conversions.py  test_progress_conversions.py
tests/unit/: test_backends.py  test_converter.py  test_detector.py  test_estimator.py  test_formats.py  test_progress.py  test_router.py
(+16 files in other folders)
